--- a/pages/home-page/index.module.css
+++ b/pages/home-page/index.module.css
@@ -1,7 +1,7 @@
 .background {
   background: #f0f0f2;
   width: 100vw;
-  height: 338vw;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +9,7 @@
 
 .info_card_1 {
   width: 90vw;
-  height: 45vw;
+  height: auto;
   border-radius: 15px;
   margin: 5vw;
   padding: 4vw;
@@ -18,7 +18,7 @@
 
 .info_card_2 {
   width: 90vw;
-  height: 120vw;
+  height: auto;
   border-radius: 15px;
   margin: 5vw;
   padding: 4vw;
@@ -31,7 +31,7 @@
 
 .input_card_1 {
   width: 90vw;
-  height: 78vw;
+  height: auto;
   border-radius: 15px;
   margin: 5vw;
   padding: 4vw;
@@ -56,10 +56,11 @@
 
 .input_card_2 {
   width: 90vw;
-  height: 50vw;
+  height: auto;
   border-radius: 15px;
   margin: 5vw;
   padding: 4vw;
+  margin-bottom: 7vw;
   background-color: #ffff;
   display: flex;
   flex-direction: column;
@@ -81,7 +82,7 @@
 
 .submit_btn {
   width: 100%;
-  padding: 5vw;
+  padding-top: 7vw;
   text-align: center;
 }
 
